# Piano

./: .gitignore  .gitmodules  CMakeLists.txt  Changelist.txt  README.md  release.sh  test.sh
.cache/clangd/index/: AlternateSet.hh.B3EEAFBCF62503F1.idx  AlternateSubst.hh.A587DE88ECCA2DF0.idx  AlternateSubstFormat1.hh.D0FCDE26431C4237.idx  Anchor.hh.DB04D32AF0528B79.idx  AnchorFormat1.hh.CA359E015C8CA78C.idx  AnchorFormat2.hh.B69EAE556ECC95A2.idx  AnchorFormat3.hh.1DA994A42456493D.idx  AnchorMatrix.hh.D1AA3F04508A9270.idx  AudioFFT.cpp.7205E88B08DCD566.idx  AudioFFT.h.5E4D070428A9905A.idx  AudioFilterTypes.h.260CF34C9471E19A.idx  BidiChain.c.AEFB5D04A4476D34.idx  BidiChain.h.FBA28B61C3767A8A.idx  BidiTypeLookup.c.BD269FABD129A7B8.idx  BidiTypeLookup.h.975332D463405D77.idx  BracketQueue.c.BF413728EA86BC6E.idx  BracketQueue.h.63CAA2E6BD652C2A.idx  BracketType.h.F4030E9CE6F2BCFF.idx  ButterworthCreator.cpp.7A80E3D5ECBD745A.idx  ButterworthCreator.h.D9435FE91C2EC7D6.idx  CBDT.hh.52C82454AB9DF3EF.idx  COLR.hh.11BDE42494A90917.idx  CPAL.hh.1E047C2278CA56C3.idx  ChainContextPos.hh.124C699A98F1AE43.idx  ChainContextSubst.hh.CEC38D4029027F05.idx  Common.hh.427F98909E3A1924.idx  Common.hh.731D0F91F9A93108.idx  CompositeGlyph.hh.CFDB0BCDC36AA928.idx  ContextPos.hh.6C063D85B1FECB10.idx  ContextSubst.hh.9F99DF508C31386E.idx  Coverage.hh.022AAA27FF69A8FC.idx  CoverageFormat1.hh.146DBE94BFF67B40.idx  CoverageFormat2.hh.D32D0CDF1EFC4AB0.idx  CursivePos.hh.23640A4DFF4993DB.idx  CursivePosFormat1.hh.2B8FB223A3446046.idx  ExtensionPos.hh.B38649AC98A87E46.idx  ExtensionSubst.hh.6131DD4CEAF0F8D6.idx  FFTConvolver.cpp.AD422E7FB78D4040.idx  FFTConvolver.h.1BF3B964C619C6DC.idx  FilterInstance.h.C2D90CA31615C100.idx  (+2165 more)
.github/workflows/: build_linux.yaml  build_macos.yaml  build_windows.yaml  performance.yaml  test.yaml
Installer/: build.sh  crashreporter.json
Installer/macOS/: distribution.xml  welcome.txt
Installer/macOS/scripts/: preinstall
Installer/win/: Piano.iss
ci/: build.sh
dev/bench/: data.js
plugin/Source/: FFTConvolver.cpp  FFTConvolver.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dwgs.cpp  dwgs.h  filter.cpp  filter.h  hammer.cpp  qiano.cpp  qiano.h  reverb.cpp  reverb.h  utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp
